fix wrap problem

--- a/calculator/nightmode.css
+++ b/calculator/nightmode.css
@@ -78,14 +78,15 @@
 }
 #above{/*calculate screen*/
     width: 90%;
-    height: 90px;
+    height: 80px;
     text-align: right;
-    font-size: 60px;
+    font-size: 50px;
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 10px;
     overflow-x: auto;
     transition: 0.2s;
+    white-space: nowrap;
 }
 @media(max-width: 767px){
     #above{
