--- a/calculator/style.css
+++ b/calculator/style.css
@@ -76,14 +76,16 @@
 }
 #above{/*calculate screen*/
     width: 90%;
-    height: 90px;
+    height: 80px;
     text-align: right;
-    font-size: 60px;
+    font-size: 50px;
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 10px;
     overflow-x: auto;
+    overflow-y: visible;
     transition: 0.2s;
+    white-space: nowrap;
 }
 @media(max-width: 767px){
     #above{
@@ -93,7 +95,7 @@
 
 #bottom{/*result screen*/
     width: 90%;
-    height: 40px;
+    height: 50px;
     text-align: right;
     font-size: 30px;
     padding-left: 5%;
